--- a/index.html
+++ b/index.html
@@ -7,13 +7,44 @@
     <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
     <title>Chat app</title>
+    <style>
+        body{
+            padding: 0;
+            margin:0;
+            display: flex;
+            justify-content: center;
+        }
+        #message-container{
+            width: 80%;
+            max-width: 1200;
+        }
+        #message-container div{
+            background-color: #ccc;
+            padding: 5px;
+        }
+        #message-container div:nth-child(2n){
+            background-color: #fff;
+        }
+        #send-container{
+            position: fixed;
+            padding-bottom: 30px;
+            bottom: 0;
+            background-color: white;
+            max-width: 1200px;
+            width: 80%;
+            display: flex;
+        }
+        #message-input {
+            flex-grow: 1;
+        }
+    </style>
 </head>
 <body>
     <div id="message-container">
-        <div id="send-container">
+        <form id="send-container">
             <input type="text" id="message-input" />
             <button type="submit" id="send-button">Send</button>
-        </div>
+        </form>
     </div>
 </body>
 </html>
